--- a/JobSeekingSystem/src/ManageJobGUI.form
+++ b/JobSeekingSystem/src/ManageJobGUI.form
@@ -3,10 +3,11 @@
   <grid id="27dc6" binding="manageJobPanel" layout-manager="GridLayoutManager" row-count="27" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="100" bottom="20" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="654" height="1250"/>
+      <xy x="20" y="20" width="850" height="1250"/>
     </constraints>
     <properties>
-      <minimumSize width="654" height="790"/>
+      <minimumSize width="850" height="950"/>
+      <preferredSize width="850" height="950"/>
     </properties>
     <border type="none"/>
     <children>
