--- a/JobSeekingSystem/src/JobSeekerUpdateGUI.form
+++ b/JobSeekingSystem/src/JobSeekerUpdateGUI.form
@@ -229,7 +229,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3ad64" class="javax.swing.JList" binding="list1" default-binding="true">
+              <component id="3ad64" class="javax.swing.JList" binding="locationList">
                 <constraints/>
                 <properties/>
               </component>
