--- a/JobSeekingSystem/src/JobSeekerUpdateGUI.form
+++ b/JobSeekingSystem/src/JobSeekerUpdateGUI.form
@@ -116,7 +116,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="27e5e" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="27e5e" class="javax.swing.JTextField" binding="locationInput">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
